--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -9,4 +9,6 @@ COPY ./src .
 
 RUN mkdir -p /app/internal/database/sql
 
-CMD ["go", "test", "-v", "-cover", "-coverprofile=coverage.out", "-coverpkg=github.com/taucuya/ppo/internal/repository/postgres/reps/...", "./internal/repository/tests/..."]
+CMD ["go", "test", "-v", "./internal/integration_tests/..."]
+
+# , "-cover", "-coverprofile=coverage.out", "-coverpkg=github.com/taucuya/ppo/internal/integration_tests...", 
