--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -1,4 +1,4 @@
-FROM golang:1.23.6
+FROM golang:1.24.0-alpine AS builder
 
 WORKDIR /app
 
@@ -7,8 +7,8 @@ RUN go mod download
 
 COPY ./src .
 
-RUN mkdir -p /app/internal/database/sql
+RUN mkdir -p ./internal/database/sql
 
-CMD ["go", "test", "-v", "./internal/integration_tests/..."]
+CMD ["go", "test", "-v", "./internal/e2e_tests/..."]
 
 # , "-cover", "-coverprofile=coverage.out", "-coverpkg=github.com/taucuya/ppo/internal/integration_tests...", 
