--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,8 @@ jobs:
 
     - name: Run unit tests
       run: |
-        go test -v -race ./internal/service/...
-        go test -v -race ./internal/repository/...
+        go test -v -race ./internal/core/service/...
+        go test -v -race ./internal/repository/postgres/reps/...
 
     - name: Upload coverage reports
       uses: codecov/codecov-action@v3
