--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,16 +34,12 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.24'
+        cache-dependency-path: src/go.sum
 
     - name: Run unit tests
       run: |
         go test -v -race ./internal/core/service/...
         go test -v -race ./internal/repository/postgres/reps/...
-
-    - name: Upload coverage reports
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage.out
 
   integration-tests:
     name: Integration Tests
