--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,104 @@
-name: CI/CD Pipeline
+# name: CI/CD Pipeline
+
+# on:
+#   push:
+#     branches: [ testing ]
+#   pull_request:
+#     branches: [ main ]
+
+# jobs:
+#   unit-tests:
+#     name: Unit Tests
+#     runs-on: ubuntu-latest
+    
+#     services:
+#       postgres:
+#         image: postgres:15-alpine
+#         env:
+#           POSTGRES_USER: test_user
+#           POSTGRES_PASSWORD: test_password
+#           POSTGRES_DB: test_db
+#         options: >-
+#           --health-cmd pg_isready
+#           --health-interval 10s
+#           --health-timeout 5s
+#           --health-retries 5
+#         ports:
+#           - 5432:5432
+
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v4
+
+#     - name: Set up Go
+#       uses: actions/setup-go@v4
+#       with:
+#         go-version: '1.24'
+#         cache-dependency-path: src/go.sum
+
+#     - name: Run unit tests
+#       working-directory: ./src
+#       run: |
+#         go test -v -race ./internal/core/service/...
+#         go test -v -race ./internal/repository/postgres/reps/...
+
+
+#   integration-tests:
+#     name: Integration Tests
+#     runs-on: ubuntu-latest
+#     needs: unit-tests
+    
+#     services:
+#       postgres:
+#         image: postgres:15-alpine
+#         env:
+#           POSTGRES_USER: test_user
+#           POSTGRES_PASSWORD: test_password
+#           POSTGRES_DB: test_db
+#         options: >-
+#           --health-cmd pg_isready
+#           --health-interval 10s
+#           --health-timeout 5s
+#           --health-retries 5
+#         ports:
+#           - 5432:5432
+
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v4
+
+#     - name: Set up Go
+#       uses: actions/setup-go@v4
+#       with:
+#         go-version: '1.24'
+
+#     - name: Run integration tests
+#       working-directory: ./src
+#       run: |
+#           docker compose -f ../docker-compose.integrationtest.yml up --build --abort-on-container-exit
+#           docker compose -f ../docker-compose.integrationtest.yml down
+#       env:
+#         DB_DSN: postgres://test_user:test_password@localhost:5432/test_db?sslmode=disable
+
+#   e2e-tests:
+#     name: E2E Tests
+#     runs-on: ubuntu-latest
+#     needs: integration-tests
+
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v4
+
+#     - name: Set up Docker Buildx
+#       uses: docker/setup-buildx-action@v3
+
+#     - name: Run E2E tests with Docker Compose
+#       working-directory: ./src
+#       run: |
+#         docker compose -f ../docker-compose.yml up --build --abort-on-container-exit
+#         docker compose -f ../docker-compose.yml down
+
+name: CI/CD Pipeline with Allure
 
 on:
   push:
@@ -36,49 +136,56 @@ jobs:
         go-version: '1.24'
         cache-dependency-path: src/go.sum
 
-    - name: Run unit tests
+    - name: Install gotestsum and Allure
+      run: |
+        go install gotest.tools/gotestsum@latest
+        sudo apt-get update
+        sudo apt-get install allure
+
+    - name: Run unit tests with Allure
       working-directory: ./src
       run: |
-        go test -v -race ./internal/core/service/...
-        go test -v -race ./internal/repository/postgres/reps/...
+        mkdir -p allure-results
+        gotestsum --junitfile allure-results/junit-unit.xml --format standard-verbose \
+          -- ./internal/core/service/... ./internal/repository/postgres/reps/... -v -race
 
+    - name: Upload unit tests results
+      uses: actions/upload-artifact@v4
+      with:
+        name: unit-test-results
+        path: src/allure-results/
+        retention-days: 1
 
   integration-tests:
     name: Integration Tests
     runs-on: ubuntu-latest
     needs: unit-tests
-    
-    services:
-      postgres:
-        image: postgres:15-alpine
-        env:
-          POSTGRES_USER: test_user
-          POSTGRES_PASSWORD: test_password
-          POSTGRES_DB: test_db
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.24'
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-    - name: Run integration tests
-      working-directory: ./src
+    - name: Install Allure
       run: |
-          docker compose -f ../docker-compose.integrationtest.yml up --build --abort-on-container-exit
-          docker compose -f ../docker-compose.integrationtest.yml down
-      env:
-        DB_DSN: postgres://test_user:test_password@localhost:5432/test_db?sslmode=disable
+        sudo apt-get update
+        sudo apt-get install allure
+
+    - name: Run integration tests in container and get Allure results
+      run: |
+        docker compose -f docker-compose.integrationtest.yml up --build --abort-on-container-exit
+        
+        mkdir -p integration-allure-results
+        docker compose -f docker-compose.integrationtest.yml cp tests:/app/allure-results/ ./integration-allure-results/ || echo "No allure results found"
+
+    - name: Upload integration tests results
+      uses: actions/upload-artifact@v4
+      with:
+        name: integration-test-results
+        path: integration-allure-results/
+        retention-days: 1
 
   e2e-tests:
     name: E2E Tests
@@ -92,8 +199,55 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Run E2E tests with Docker Compose
-      working-directory: ./src
+    - name: Install Allure
       run: |
-        docker compose -f ../docker-compose.yml up --build --abort-on-container-exit
-        docker compose -f ../docker-compose.yml down
+        sudo apt-get update
+        sudo apt-get install allure
+
+    - name: Run E2E tests and get Allure results
+      run: |
+        docker compose -f docker-compose.yml up --build --abort-on-container-exit
+        
+        mkdir -p e2e-allure-results
+        docker compose -f docker-compose.yml cp tests:/app/allure-results/ ./e2e-allure-results/ || echo "No allure results in container"
+
+    - name: Upload E2E test results
+      uses: actions/upload-artifact@v4
+      with:
+        name: e2e-test-results
+        path: e2e-allure-results/
+        retention-days: 1
+
+  generate-allure-report:
+    name: Generate Allure Report
+    runs-on: ubuntu-latest
+    needs: [unit-tests, integration-tests, e2e-tests]
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Download all test results
+      uses: actions/download-artifact@v4
+      with:
+        path: all-results
+
+    - name: Install Allure
+      run: |
+        sudo apt-get update
+        sudo apt-get install allure
+
+    - name: Combine and generate Allure report
+      run: |
+        mkdir -p combined-allure-results
+      
+        find all-results -name "*.xml" -exec cp {} combined-allure-results/ \;
+      
+        allure generate combined-allure-results -o allure-report --clean
+
+    - name: Upload Allure report
+      uses: actions/upload-artifact@v4
+      with:
+        name: allure-report
+        path: allure-report/
+        retention-days: 30
