--- a/docker-compose.integrationtest.yml
+++ b/docker-compose.integrationtest.yml
@@ -25,6 +25,8 @@ services:
       - postgres
     networks:
       - app-network
+    volumes:
+      - ./allure-results:/app/allure-results
     environment:
       APP_URL: http://localhost:8080
       DB_HOST: postgres
