--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,13 +136,11 @@ jobs:
         go-version: '1.24'
         cache-dependency-path: src/go.sum
 
-    - name: Install gotestsum and Allure
+    - name: Install gotestsum
       run: |
         go install gotest.tools/gotestsum@latest
-        sudo apt-get update
-        sudo apt-get install allure
 
-    - name: Run unit tests with Allure
+    - name: Run unit tests
       working-directory: ./src
       run: |
         mkdir -p allure-results
@@ -168,17 +166,17 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Install Allure
+    - name: Run integration tests and generate Allure results
       run: |
-        sudo apt-get update
-        sudo apt-get install allure
-
-    - name: Run integration tests in container and get Allure results
-      run: |
+        mkdir -p integration-allure-results
+        
         docker compose -f docker-compose.integrationtest.yml up --build --abort-on-container-exit
         
-        mkdir -p integration-allure-results
-        docker compose -f docker-compose.integrationtest.yml cp tests:/app/allure-results/ ./integration-allure-results/ || echo "No allure results found"
+        docker compose -f docker-compose.integrationtest.yml cp tests:/app/allure-results/ ./integration-allure-results/ || \
+        docker compose -f docker-compose.integrationtest.yml cp tests:/app/allure-results ./integration-allure-results/ || \
+        echo "Trying alternative location..."
+        
+        ls -la integration-allure-results/
 
     - name: Upload integration tests results
       uses: actions/upload-artifact@v4
@@ -199,17 +197,17 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Install Allure
+    - name: Run E2E tests and generate Allure results
       run: |
-        sudo apt-get update
-        sudo apt-get install allure
-
-    - name: Run E2E tests and get Allure results
-      run: |
+        mkdir -p e2e-allure-results
+        
         docker compose -f docker-compose.yml up --build --abort-on-container-exit
         
-        mkdir -p e2e-allure-results
-        docker compose -f docker-compose.yml cp tests:/app/allure-results/ ./e2e-allure-results/ || echo "No allure results in container"
+        docker compose -f docker-compose.yml cp tests:/app/allure-results/ ./e2e-allure-results/ || \
+        docker compose -f docker-compose.yml cp tests:/app/allure-results ./e2e-allure-results/ || \
+        echo "Trying alternative location..."
+        
+        ls -la e2e-allure-results/
 
     - name: Upload E2E test results
       uses: actions/upload-artifact@v4
@@ -235,13 +233,27 @@ jobs:
     - name: Install Allure
       run: |
         sudo apt-get update
-        sudo apt-get install allure
+        sudo apt-get install default-jre -y
+        wget -O allure-2.27.0.tgz https://github.com/allure-framework/allure2/releases/download/2.27.0/allure-2.27.0.tgz
+        sudo tar -zxvf allure-2.27.0.tgz -C /opt/
+        sudo ln -s /opt/allure-2.27.0/bin/allure /usr/bin/allure
+        allure --version
+
+    - name: Debug - Show downloaded files
+      run: |
+        echo "=== Downloaded files structure ==="
+        find all-results -type f -name "*.xml" | head -20
+        echo "=== Total XML files found: ==="
+        find all-results -name "*.xml" | wc -l
 
     - name: Combine and generate Allure report
       run: |
         mkdir -p combined-allure-results
         
         find all-results -name "*.xml" -exec cp {} combined-allure-results/ \;
+        
+        echo "=== Files in combined-allure-results ==="
+        ls -la combined-allure-results/
         
         allure generate combined-allure-results -o allure-report --clean
 
