try gen allure with fistory e2e

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-# name: CI/CD Pipeline
+# name: CI/CD Pipeline with Allure
 
 # on:
 #   push:
@@ -36,49 +36,83 @@
 #         go-version: '1.24'
 #         cache-dependency-path: src/go.sum
 
+#     - name: Install gotestsum
+#       run: |
+#         go install gotest.tools/gotestsum@latest
+
 #     - name: Run unit tests
 #       working-directory: ./src
 #       run: |
-#         go test -v -race ./internal/core/service/...
-#         go test -v -race ./internal/repository/postgres/reps/...
+#         mkdir -p allure-results
+#         gotestsum --junitfile allure-results/junit-unit.xml --format standard-verbose \
+#           -- ./internal/core/service/... ./internal/repository/postgres/reps/... -v -race
 
+#     - name: Upload unit tests results
+#       uses: actions/upload-artifact@v4
+#       with:
+#         name: unit-test-results
+#         path: src/allure-results/
+#         retention-days: 1
 
 #   integration-tests:
 #     name: Integration Tests
 #     runs-on: ubuntu-latest
 #     needs: unit-tests
-    
-#     services:
-#       postgres:
-#         image: postgres:15-alpine
-#         env:
-#           POSTGRES_USER: test_user
-#           POSTGRES_PASSWORD: test_password
-#           POSTGRES_DB: test_db
-#         options: >-
-#           --health-cmd pg_isready
-#           --health-interval 10s
-#           --health-timeout 5s
-#           --health-retries 5
-#         ports:
-#           - 5432:5432
 
 #     steps:
 #     - name: Checkout code
 #       uses: actions/checkout@v4
 
-#     - name: Set up Go
-#       uses: actions/setup-go@v4
-#       with:
-#         go-version: '1.24'
+#     - name: Set up Docker Buildx
+#       uses: docker/setup-buildx-action@v3
 
-#     - name: Run integration tests
-#       working-directory: ./src
+#     - name: Create shared directory for results
 #       run: |
-#           docker compose -f ../docker-compose.integrationtest.yml up --build --abort-on-container-exit
-#           docker compose -f ../docker-compose.integrationtest.yml down
-#       env:
-#         DB_DSN: postgres://test_user:test_password@localhost:5432/test_db?sslmode=disable
+#         mkdir -p shared-results
+#         chmod 777 shared-results
+
+#     - name: Run tests in container with shared volume
+#       run: |
+#         docker run -d --name test-postgres \
+#           -e POSTGRES_USER=test_user \
+#           -e POSTGRES_PASSWORD=test_password \
+#           -e POSTGRES_DB=test_db \
+#           -p 5432:5432 \
+#           postgres:15-alpine
+        
+#         until pg_isready -h localhost -p 5432 -U test_user; do
+#           sleep 2
+#         done
+        
+#         docker run --rm \
+#           --name integration-tests \
+#           --link test-postgres:postgres \
+#           -v $(pwd)/shared-results:/results \
+#           -e DB_DSN="postgres://test_user:test_password@postgres:5432/test_db?sslmode=disable" \
+#           $(docker build -q -f Dockerfile.integration_tests .) \
+#           sh -c "
+#             mkdir -p /results &&
+#             gotestsum --junitfile /results/junit-integration.xml --format standard-verbose \
+#               -- ./internal/integration_tests/... -v -tags=integration
+#           "
+        
+#         docker stop test-postgres
+#         docker rm test-postgres
+
+#     - name: Check and upload results
+#       run: |
+#         echo "=== Checking shared-results ==="
+#         ls -la shared-results/
+#         mkdir -p integration-allure-results
+#         cp shared-results/* integration-allure-results/ 2>/dev/null || echo "No files to copy"
+#         ls -la integration-allure-results/
+
+#     - name: Upload integration tests results
+#       uses: actions/upload-artifact@v4
+#       with:
+#         name: integration-test-results
+#         path: integration-allure-results/
+#         retention-days: 1
 
 #   e2e-tests:
 #     name: E2E Tests
@@ -92,11 +126,100 @@
 #     - name: Set up Docker Buildx
 #       uses: docker/setup-buildx-action@v3
 
-#     - name: Run E2E tests with Docker Compose
-#       working-directory: ./src
+#     - name: Create shared directory for results
 #       run: |
-#         docker compose -f ../docker-compose.yml up --build --abort-on-container-exit
-#         docker compose -f ../docker-compose.yml down
+#         mkdir -p shared-results
+#         chmod 777 shared-results
+
+#     - name: Build and run E2E tests with shared volume
+#       run: |
+#         docker compose -f docker-compose.yml up -d --build
+        
+#         echo "Waiting for services to be ready..."
+#         sleep 30
+        
+#         docker run --rm \
+#           --network container:$(docker compose -f docker-compose.yml ps -q app) \
+#           -v $(pwd)/shared-results:/results \
+#           -e API_URL="http://app:8080" \
+#           $(docker build -q -f Dockerfile.e2e_tests .) \
+#           sh -c "
+#             mkdir -p /results &&
+#             gotestsum --junitfile /results/junit-e2e.xml --format standard-verbose \
+#               -- ./internal/e2e_tests/... -v -tags=e2e
+#           "
+        
+#         docker compose -f docker-compose.yml down
+
+#     - name: Process and upload E2E results
+#       run: |
+#         echo "=== Checking shared-results ==="
+#         ls -la shared-results/
+#         mkdir -p e2e-allure-results
+        
+#         cp shared-results/* e2e-allure-results/ 2>/dev/null || echo "No files to copy"
+        
+#         if [ -f e2e-allure-results/junit-e2e.xml ]; then
+#           echo "Converting JUnit to Allure format..."
+#         fi
+        
+#         ls -la e2e-allure-results/
+
+#     - name: Upload E2E test results
+#       uses: actions/upload-artifact@v4
+#       with:
+#         name: e2e-test-results
+#         path: e2e-allure-results/
+#         retention-days: 1
+
+#   generate-allure-report:
+#     name: Generate Allure Report
+#     runs-on: ubuntu-latest
+#     needs: [unit-tests, integration-tests, e2e-tests]
+    
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v4
+
+#     - name: Download all test results
+#       uses: actions/download-artifact@v4
+#       with:
+#         path: all-results
+
+#     - name: Install Allure
+#       run: |
+#         sudo apt-get update
+#         sudo apt-get install default-jre -y
+#         wget -O allure-2.27.0.tgz https://github.com/allure-framework/allure2/releases/download/2.27.0/allure-2.27.0.tgz
+#         sudo tar -zxvf allure-2.27.0.tgz -C /opt/
+#         sudo ln -s /opt/allure-2.27.0/bin/allure /usr/bin/allure
+#         allure --version
+
+#     - name: Debug - Show downloaded files
+#       run: |
+#         echo "=== Downloaded files structure ==="
+#         find all-results -type f -name "*.xml" | head -20
+#         echo "=== Total XML files found: ==="
+#         find all-results -name "*.xml" | wc -l
+
+#     - name: Combine and generate Allure report
+#       run: |
+#         mkdir -p combined-allure-results
+        
+#         find all-results -name "*.xml" -exec cp {} combined-allure-results/ \;
+        
+#         echo "=== Files in combined-allure-results ==="
+#         ls -la combined-allure-results/
+        
+#         allure generate combined-allure-results -o allure-report --clean
+
+#     - name: Upload Allure report
+#       uses: actions/upload-artifact@v4
+#       with:
+#         name: allure-report
+#         path: allure-report/
+#         retention-days: 30
+
 
 name: CI/CD Pipeline with Allure
 
@@ -144,8 +267,7 @@ jobs:
       working-directory: ./src
       run: |
         mkdir -p allure-results
-        gotestsum --junitfile allure-results/junit-unit.xml --format standard-verbose \
-          -- ./internal/core/service/... ./internal/repository/postgres/reps/... -v -race
+        gotestsum --junitfile allure-results/junit-unit.xml --format standard-verbose -- ./internal/core/service/... ./internal/repository/postgres/reps/... -v -race
 
     - name: Upload unit tests results
       uses: actions/upload-artifact@v4
@@ -173,35 +295,19 @@ jobs:
 
     - name: Run tests in container with shared volume
       run: |
-        docker run -d --name test-postgres \
-          -e POSTGRES_USER=test_user \
-          -e POSTGRES_PASSWORD=test_password \
-          -e POSTGRES_DB=test_db \
-          -p 5432:5432 \
-          postgres:15-alpine
+        docker run -d --name test-postgres -e POSTGRES_USER=test_user -e POSTGRES_PASSWORD=test_password -e POSTGRES_DB=test_db -p 5432:5432 postgres:15-alpine
         
         until pg_isready -h localhost -p 5432 -U test_user; do
           sleep 2
         done
         
-        docker run --rm \
-          --name integration-tests \
-          --link test-postgres:postgres \
-          -v $(pwd)/shared-results:/results \
-          -e DB_DSN="postgres://test_user:test_password@postgres:5432/test_db?sslmode=disable" \
-          $(docker build -q -f Dockerfile.integration_tests .) \
-          sh -c "
-            mkdir -p /results &&
-            gotestsum --junitfile /results/junit-integration.xml --format standard-verbose \
-              -- ./internal/integration_tests/... -v -tags=integration
-          "
+        docker run --rm --name integration-tests --link test-postgres:postgres -v $(pwd)/shared-results:/results -e DB_DSN="postgres://test_user:test_password@postgres:5432/test_db?sslmode=disable" $(docker build -q -f Dockerfile.integration_tests .) sh -c "mkdir -p /results && gotestsum --junitfile /results/junit-integration.xml --format standard-verbose -- ./internal/integration_tests/... -v -tags=integration"
         
         docker stop test-postgres
         docker rm test-postgres
 
     - name: Check and upload results
       run: |
-        echo "=== Checking shared-results ==="
         ls -la shared-results/
         mkdir -p integration-allure-results
         cp shared-results/* integration-allure-results/ 2>/dev/null || echo "No files to copy"
@@ -234,36 +340,15 @@ jobs:
     - name: Build and run E2E tests with shared volume
       run: |
         docker compose -f docker-compose.yml up -d --build
-        
-        echo "Waiting for services to be ready..."
         sleep 30
-        
-        docker run --rm \
-          --network container:$(docker compose -f docker-compose.yml ps -q app) \
-          -v $(pwd)/shared-results:/results \
-          -e API_URL="http://app:8080" \
-          $(docker build -q -f Dockerfile.e2e_tests .) \
-          sh -c "
-            mkdir -p /results &&
-            gotestsum --junitfile /results/junit-e2e.xml --format standard-verbose \
-              -- ./internal/e2e_tests/... -v -tags=e2e
-          "
-        
+        docker run --rm --network container:$(docker compose -f docker-compose.yml ps -q app) -v $(pwd)/shared-results:/results -e API_URL="http://app:8080" $(docker build -q -f Dockerfile.tests .) sh -c "mkdir -p /results && gotestsum --junitfile /results/junit-e2e.xml --format standard-verbose -- ./internal/e2e_tests/... -v -tags=e2e"
         docker compose -f docker-compose.yml down
 
     - name: Process and upload E2E results
       run: |
-        echo "=== Checking shared-results ==="
         ls -la shared-results/
         mkdir -p e2e-allure-results
-        
         cp shared-results/* e2e-allure-results/ 2>/dev/null || echo "No files to copy"
-        
-        if [ -f e2e-allure-results/junit-e2e.xml ]; then
-          echo "Converting JUnit to Allure format..."
-          # Добавьте конвертацию если нужно
-        fi
-        
         ls -la e2e-allure-results/
 
     - name: Upload E2E test results
@@ -279,13 +364,23 @@ jobs:
     needs: [unit-tests, integration-tests, e2e-tests]
     
     steps:
-    - name: Checkout code
+    - name: Checkout code with history
       uses: actions/checkout@v4
+      with:
+        ref: ${{ github.ref }}
+        path: main-repo
 
     - name: Download all test results
       uses: actions/download-artifact@v4
       with:
         path: all-results
+
+    - name: Download previous allure history
+      uses: actions/download-artifact@v4
+      with:
+        name: allure-history
+        path: allure-history/
+        continue-on-error: true
 
     - name: Install Allure
       run: |
@@ -298,21 +393,23 @@ jobs:
 
     - name: Debug - Show downloaded files
       run: |
-        echo "=== Downloaded files structure ==="
         find all-results -type f -name "*.xml" | head -20
-        echo "=== Total XML files found: ==="
         find all-results -name "*.xml" | wc -l
+        ls -la allure-history/ || echo "No history found"
 
     - name: Combine and generate Allure report
       run: |
         mkdir -p combined-allure-results
-        
         find all-results -name "*.xml" -exec cp {} combined-allure-results/ \;
-        
-        echo "=== Files in combined-allure-results ==="
         ls -la combined-allure-results/
-        
         allure generate combined-allure-results -o allure-report --clean
+        if [ -d "allure-history/history" ]; then
+          cp -r allure-history/history allure-report/
+        fi
+        mkdir -p new-history
+        if [ -d "allure-report/history" ]; then
+          cp -r allure-report/history new-history/
+        fi
 
     - name: Upload Allure report
       uses: actions/upload-artifact@v4
@@ -320,3 +417,19 @@ jobs:
         name: allure-report
         path: allure-report/
         retention-days: 30
+
+    - name: Upload new allure history
+      uses: actions/upload-artifact@v4
+      with:
+        name: allure-history
+        path: new-history/
+        retention-days: 30
+
+    - name: Deploy to GitHub Pages
+      if: github.ref == 'refs/heads/testing'
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: allure-report
+        destination_dir: ./allure
+        keep_files: false
