--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,24 +37,6 @@ services:
     networks:
       - app-network
 
-
-
-## тесты
-  # test_db:
-  #   image: postgres:15-alpine
-  #   environment:
-  #     POSTGRES_USER: test_user
-  #     POSTGRES_PASSWORD: test_password
-  #     POSTGRES_DB: test_db
-  #   ports:
-  #     - "5433:5432"
-  #   networks:
-  #     - test_network
-  #   healthcheck:
-  #     test: ["CMD-SHELL", "pg_isready -U test_user -d test_db"]
-  #     interval: 5s
-  #     timeout: 5s
-  #     retries: 5  
   tests:
     build:
       context: .
@@ -64,7 +46,7 @@ services:
     networks:
       - app-network
     environment:
-      APP_URL: http://api:8080
+      APP_URL: http://localhost:8080
       DB_HOST: postgres
       DB_PORT: 5432
       DB_USER: test_user
