--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -229,3 +229,4 @@ jobs:
         publish_dir: allure-report
         destination_dir: ./allure
         keep_files: true
+        force_orphan: true
